support homepage -> how-to section mobile fix

--- a/css/less/support-kb.less
+++ b/css/less/support-kb.less
@@ -1,5 +1,19 @@
 /* styles just for the homepage*/
 .columbia-breadcrumb-home-support {
+	@media (min-width: 18.75em){
+		.use-case-container {
+			.see-more {
+				text-align: right;
+			}
+		}
+	}
+	@media (min-width: 25em){
+		.use-case-container {
+			.see-more {
+				text-align: left;
+			}
+		}
+	}
 	// how-to section styles
 	.how-to{
 		dl.mt-listing-detailed {
@@ -27,12 +41,10 @@
 					margin-right: 10px;
 				}
 			}
-
-			.see-more {
-				text-align: right;
-			}	
 		}
-
+		.see-more {
+			text-align: right;
+		}
 	}
 }
 
